<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find Me</string>
    <string name="name">Person\'s Name:</string>
    <string name="phoneNumber">Old Phone Number:</string>
    <string name="search">Search</string>
    <string name="searchResult">Search Result</string>
    <string name="call">Call</string>
    <string name="request">Request</string>
    <string name="sendingRequest">Sending Request \.\.\.</string>
    <string name="addToContact">Add</string>
    <string name="update">Update</string>
    <string name="prompt_old_phone">Set Your Old Number</string>
    <string name="desc">One of your friends may have changed his/her phone number but not yet notify you? Try to find!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="title_activity_update_phone_number">UpdatePhoneNumberActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_process_request">ProcessRequestActivity</string>
    <string name="process_request_title">New Request</string>
    <string name="accept_request">Accept</string>
    <string name="ignore_request">Ignore</string>

</resources>
