<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.epam.hackfest.findme.ProcessRequestActivity"
     >

    <TextView
        android:id="@+id/textViewRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/process_request_title" />
    
    	<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonAccept"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
    		<ProgressBar
		        android:id="@+id/progressBar"
		        style="?android:attr/progressBarStyleLarge"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="8dp"
		         />
    	</LinearLayout>
    
        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:layout_above="@+id/buttonIgnore"
            android:layout_marginBottom="20dp"
            android:text="@string/accept_request" />
        
        <Button
            android:id="@+id/buttonIgnore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="@string/ignore_request" />

</RelativeLayout>
