<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epam.hackfest.findme.MainActivity" >
    
    <ImageView
        android:id="@+id/imageViewBg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/findme_background" />
    
    <RelativeLayout 
        android:layout_below="@+id/imageViewBg"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
        >
    
    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDesc"
        android:layout_marginTop="20dp"
        android:text=""
        android:ems="14" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewName"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="12"
        android:maxLines="1"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextName"
        android:layout_marginTop="20dp"
        android:text=""
        android:ems="14" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPhoneNumber"
        android:inputType="phone"
        android:hint="@string/phoneNumber"
        android:ems="12"
        android:maxLines="1"
        android:singleLine="true"
                 >
    </EditText>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/editTextPhoneNumber"
        android:orientation="vertical"
        android:gravity="center" >
        
        <ProgressBar
            android:id="@+id/progressBarSearch"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:text="@string/search" />
        
       
    </LinearLayout>


</RelativeLayout>
</RelativeLayout>